@@ -11,10 +11,10 @@ buildscript {
 }
 
 plugins {
-    //id "io.franzbecker.gradle-lombok" version "1.11"
     id 'java'
     id 'application'
     id 'net.ltgt.apt' version '0.10'
+    id 'java-library'
 }
 apply plugin: 'org.junit.platform.gradle.plugin'
 
@@ -33,32 +33,18 @@ ext {
     lombokVersion = '1.16.18'
 }
 
-tasks.withType(JavaCompile) { // see note below
-    options.fork = true
-    options.forkOptions.jvmArgs += [
-            '--add-opens', 'jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
-            '--add-opens', 'jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED',
-            '--add-opens', 'jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED',
-            '--add-opens', 'jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED',
-            '--add-opens', 'jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED',
-            '--add-opens', 'jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED',
-            '--add-opens', 'jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED',
-            '--add-opens', 'jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
-            '--add-opens', 'jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED'
-    ]
-}
-
 dependencies {
-    compile 'io.vavr:vavr:0.9.1'
+    implementation 'io.vavr:vavr:0.9.1'
 
-    compileOnly files("lib/lombok-edge.jar")
+    // See https://github.com/rzwitserloot/lombok/issues/1472
+    api files("lib/lombok-edge.jar")
 
-    compile "org.slf4j:slf4j-api:1.7.25"
-    compile "ch.qos.logback:logback-core:${logbackVersion}"
-    compile "ch.qos.logback:logback-classic:${logbackVersion}"
+    api "org.slf4j:slf4j-api:1.7.25"
+    implementation "ch.qos.logback:logback-core:${logbackVersion}"
+    implementation "ch.qos.logback:logback-classic:${logbackVersion}"
 
-    testCompile 'org.assertj:assertj-core:3.8.0'
-    testCompile "org.junit.jupiter:junit-jupiter-api:${junitJupiterVersion}"
-    testCompile "org.junit.jupiter:junit-jupiter-params:${junitJupiterVersion}"
+    testImplementation 'org.assertj:assertj-core:3.8.0'
+    testImplementation "org.junit.jupiter:junit-jupiter-api:${junitJupiterVersion}"
+    testImplementation "org.junit.jupiter:junit-jupiter-params:${junitJupiterVersion}"
     testRuntime "org.junit.jupiter:junit-jupiter-engine:${junitJupiterVersion}"
 }
